--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -8,17 +8,20 @@
 }
 .category-card {
     margin-top: 20px;
-    object-fit: contain;
+    border-radius: 100%!important;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border: none; 
+    border: none!important; 
+    
 }
 .category-card:hover {
     transform: scale(1.05);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+ 
+    border: none!important; 
 }
 
 .card-img {
-    height: 45vh;
+    height: 30vh;
+    border-radius: 50%!important;
     transition: transform 0.3s ease;
 }
 @keyframes fadeIn {
@@ -29,15 +32,74 @@
         opacity: 1;
     }
 }
+.section-heading{
+    color: #171717;
+    font-size: 50px;
+    font-weight: 600;
+    gap: 5px;
+    animation: slideInFromLeft 1s ease-out;
+}
 @media(max-width:768px){
     .carousel-item img{
         height: 40vh;
     }
     .card-img{
-        height: 20vh;
+        height: 15vh;
     }
     .title{
         font-size: small!important;
+    }
+    .section-heading{
+        font-size: 20px;
+        gap: 6px;
+    }
+    
+}
+@media(max-width:1200px){
+    .carousel-item img{
+        height: 40vh;
+    }
+    .card-img{
+        height: 15vh;
+    }
+    .title{
+        font-size: small!important;
+    }
+    .section-heading{
+        font-size: 20px;
+        gap: 6px;
+    }
+    
+}
+@media(max-width:800px){
+    .carousel-item img{
+        height: 40vh;
+    }
+    .card-img{
+        height: 15vh;
+    }
+    .title{
+        font-size: small!important;
+    }
+    .section-heading{
+        font-size: 20px;
+        gap: 6px;
+    }
+    
+}
+@media(max-width:500px){
+    .carousel-item img{
+        height: 40vh;
+    }
+    .card-img{
+        height: 15vh;
+    }
+    .title{
+        font-size: small!important;
+    }
+    .section-heading{
+        font-size: 20px;
+        gap: 6px;
     }
     
 }
