--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -36,15 +36,19 @@
     color: #171717;
     font-size: 50px;
     font-weight: 600;
+    text-align: center;
     gap: 5px;
     animation: slideInFromLeft 1s ease-out;
 }
+.title{
+    text-align: center!important;
+}
 @media(max-width:768px){
     .carousel-item img{
-        height: 40vh;
+        height: 60vh;
     }
     .card-img{
-        height: 15vh;
+        height: 10vh;
     }
     .title{
         font-size: small!important;
@@ -57,7 +61,7 @@
 }
 @media(max-width:1200px){
     .carousel-item img{
-        height: 40vh;
+        height: 60vh;
     }
     .card-img{
         height: 15vh;
@@ -73,7 +77,7 @@
 }
 @media(max-width:800px){
     .carousel-item img{
-        height: 40vh;
+        height: 60vh;
     }
     .card-img{
         height: 15vh;
@@ -92,7 +96,7 @@
         height: 40vh;
     }
     .card-img{
-        height: 15vh;
+        height: 10vh;
     }
     .title{
         font-size: small!important;
