--- a/frontend/src/Components/KMW/kmw.css
+++ b/frontend/src/Components/KMW/kmw.css
@@ -1,5 +1,5 @@
   
-.new-card {
+.kmw-card {
     margin: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border: none;
@@ -10,19 +10,19 @@
 
   
   
-  .new-card:hover {
+  .kmw-card:hover {
     transform: translateY(-10px);
   }
   
   /* Card image styling to ensure equal size */
-  .newcard-img {
+  .kmwcard-img {
     height: 180px;
     object-fit: fill;
     width: 100%;
   }
   
   /* Title styling */
-  .new-title {
+  .kmw-title {
     font-size: 1rem;
     font-weight: bold;
     margin-bottom: 10px;
@@ -40,53 +40,9 @@
     text-decoration: line-through;
     margin-left: 10px;
   }
-  .banner1 img{
-
-    display: flex;
-    flex-wrap: wrap;
-    height: 50vh;
-    padding: 10px;
-    width: 100%;
-  }
-  
-  
-@media(max-width:768px){
-
-      .banner1 img{
-
-        
-        height: 40vh;
-        padding: 10px;
-        width: 100%;
-      }
-
-
-}
-
-  
-@media(max-width:992px){
-
-  .banner1 img{
-
-        
-    height: 45vh;
-    padding: 10px;
-    width: 100%;
+  .view{
+    margin-bottom: 20px;
   }
 
-
-}
-
   
-@media(max-width:576px){
-
-
-      .banner1 img{
-
-        
-        height: 30vh;
-        padding: 10px;
-        width: 100%;
-      }
-
-}
+  
